--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#">Previous Project</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <a href="https://drive.google.com/file/d/1aAP1fcMeqYl3Reri9lRLuuCXFY_Ee7ft/view?usp=sharing" class="btn">Download Resume</a>
+        <a href="https://drive.google.com/file/d/19MtM1pFESaNI-NSk8XvxscLzJvXmRZ8n/view?usp=sharing" class="btn">Download Resume</a>
     </nav>
 
     <div class="content">
@@ -39,12 +39,12 @@
 <!--- About Section -->
 <section class="about">
     <div class="main">
-        <img src="../LuigiAmadeo_Portofolio/images/LA_CaptMorgan.jpg" alt="No Images!">
+        <img src="../LuigiAmadeo_Portofolio/images/LA_Rome.jpg" alt="No Images!">
         <div class="about-text">
             <h2>About Me</h2>
             <h5>Luigi Amadeo <span> Willem</span></h5>
             <p>Hello! Luigi Amadeo is my name. I'm now in my third year of Computer Science studies. I consider myself to be a detail-oriented, organized, exact, and dependable guy with excellent verbal and written communication skills and the ability to collaborate with others, particularly as a Front-end Developer on website development.</p>
-            <a href="https://drive.google.com/file/d/1aAP1fcMeqYl3Reri9lRLuuCXFY_Ee7ft/view?usp=sharing" class="btn">Download Resume</a>
+            <a href="https://drive.google.com/file/d/19MtM1pFESaNI-NSk8XvxscLzJvXmRZ8n/view?usp=sharing" class="btn">Download Resume</a>
         </div>
     </div>
 </section>
@@ -58,10 +58,12 @@
     </div>
 </div>
 
+
+ <!--- Project List -->
+
 <div class="completecontainer">
 
-    <div class="box">
-            <!--- Project List -->
+    <div class="box">  
             <div class="card">
                 <h5>Uni Dashboard</h5>
                 <div class="pra">
@@ -69,15 +71,14 @@
                         Unidashboard is a website application that caters to university students who want to manage their tasks easily whilst also feeling a sense of uniqueness to their experience. 
                     </p>
                     <p style="text-align: center">
-                        <a class="button" href="https://drive.google.com/drive/folders/1sGD1hceb4VoInzeiaSuIxAQcF-qvA_Us?usp=sharing">More Information</a>
+                        <a class="button" href="https://github.com/LuigiAmadeo/UniDashboard">More Information</a>
                     </p>
                 </div>
             </div>
 
         <div class="containercard">
-            <img class="photoproject_unidashboard" src="../LuigiAmadeo_Portofolio/images/UniDashboard_Web.jpg" alt="">
+            <img class="photoproject" src="../LuigiAmadeo_Portofolio/images/UniDashboard_Web.jpg" alt="">
         </div>
-
     </div>
 
 <div class="box">
@@ -88,7 +89,7 @@
                     Virtual cashbooks can make it easier for users to manage their cash efficiently, making it easy to determine cash balances at any time, enabling managers and corporate accountants to budget their cash effectively online. 
                 </p>
                 <p style="text-align: center">
-                    <a class="button" href="https://drive.google.com/drive/folders/1az0BVxYVD7uDef3ceSEYsdMTobcS3izh?usp=sharing">More Information</a>
+                    <a class="button" href="https://github.com/LuigiAmadeo/VirtualCashbook">More Information</a>
                 </p>
             </div>
         </div>
@@ -96,12 +97,9 @@
         <div class="containercard">
             <img class="photoproject" src="../LuigiAmadeo_Portofolio/images/VirtualCashbook_Web.jpg" alt="">
         </div>
-
 </div>
 
 <div class="box">
-
-
     <div class="card">
         <h5>Detecting Racist and Bad Words Using Text Mining in Social Media
         </h5>
@@ -118,7 +116,6 @@
     <div class="containercard">
         <img class="photoproject" src="../LuigiAmadeo_Portofolio/images/ICITACEE_PDF.jpg" alt="">
     </div>
-
 </div>
 
 <div class="box">
@@ -137,7 +134,6 @@
     <div class="containercard">
         <img class="photoproject" src="../LuigiAmadeo_Portofolio/images/DYID_Web.jpg" alt="">
     </div>
-
 </div>
 
 <div class="box">
@@ -148,7 +144,7 @@
                Java Project to create a simple transaction report based on MVP Concepts
             </p>
             <p style="text-align: center">
-                <a class="button" href="https://drive.google.com/drive/folders/1fNy9slWtCfS0EcZIFutbMob3EJc_Jx5R?usp=sharing">More Information</a>
+                <a class="button" href="https://github.com/LuigiAmadeo/JustDuIt">More Information</a>
             </p>
         </div>
     </div>
@@ -156,7 +152,6 @@
     <div class="containercard">
         <img class="photoproject" src="../LuigiAmadeo_Portofolio/images/JustDuIt_Application.jpg" alt="">
     </div>
-
 </div>
 
 </div> 
